# rust-websocket-server

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs  schema.rs  ws_server.rs
src/db/: db_session_manager.rs
src/http/: base_http_client.rs  moralis_http_client.rs
src/models/: alchemy_event_types.rs  alchemy_mined_transaction_data.rs  eth_transaction_types.rs  mod.rs  moralis_erc20_token_price.rs  polygon_crypto_aggregate_data.rs  polygon_crypto_level2_book_data.rs  polygon_crypto_quote_data.rs  polygon_crypto_trade_data.rs  polygon_event_types.rs
src/models/alchemy/: alchemy_event_types.rs  alchemy_mined_transaction_data.rs  mod.rs
src/models/binance/: aggregate_trade.rs  all_market_minitickers.rs  all_market_rolling_windows.rs  all_market_tickers.rs  average_price.rs  binance_event_types.rs  diff_depth.rs  index.txt  individual_symbol_book_ticker.rs  individual_symbol_miniticker.rs  individual_symbol_rolling_window.rs  individual_symbol_ticker.rs  kline.rs  mod.rs  partial_book_depth.rs  trade.rs
src/models/moralis/: mod.rs  moralis_erc20_token_price_response.rs
src/models/polygon/: mod.rs  (+4 more)
src/server/: ws_server.rs
src/subscriber/: alchemy_subscriber.rs  consume_stream.rs  mod.rs  websocket_event_types.rs  websocket_subscriber.rs
src/subscribers/: binance_subscriber.rs  mod.rs  stream_consumer.rs  websocket_event_types.rs  websocket_subscriber.rs
src/trackers/: alchemy_whale_tracker.rs  mod.rs  polygon_price_action_tracker.rs  price_movement_tracker.rs
src/util/: eth_tx_decoder.rs  event_filters.rs  mod.rs
src/web3/: mod.rs
(+2 files in other folders)
